--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -34,7 +34,9 @@ http {
 		listen <%= ENV["PORT"] %>;
 		server_name _;
 		keepalive_timeout 5;
-
+        location / {
+            root /app/public;
+        }
 		location /api/ {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header Host $http_host;
